--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
                         <a href="index.html" class="nav-link text-white" target="_blank">Inicio</a>
                         <a href="nosotros.html" class="nav-link text-white" target="_blank">Nosotros</a>
                         <a href="productos.html" class="nav-link text-white" target="_blank">Productos</a>
-                        <a href="" class="nav-link text-white" target="_blank">Competencias</a>
-                        <a href="" class="nav-link text-white" target="_blank">Motivacion</a>
-                        <a href="" class="nav-link text-white" target="_blank">Alimentacion</a>
-                        <a href="" class="nav-link text-white" target="_blank">Capacitacion</a>
+                        <a href="competencias.html" class="nav-link text-white" target="_blank">Competencias</a>
+                        <a href="capacitacion.html" class="nav-link text-white" target="_blank">Capacitacion</a>
                         <a href="contacto.html" class="nav-link text-white" target="_blank">Contacto</a>
                         
                         
