agrega capacitacion + 1 animacion

--- a/competencias.html
+++ b/competencias.html
@@ -83,12 +83,12 @@
 
             <div class="row mt-3 p-3 shadow-lg bg-body-tertiary rounded">
                 <h5 class="text-center">¡Categorias disponibles para inscripcion!</h5>
-                <div class="row row-cols-1 row-cols-md-6 justify-content-around">
-                    <img src="Assets/blockGames/nohd/cat1 (1).png" class="rounded-5" alt="">
-                    <img src="Assets/blockGames/nohd/cat2.png" class="rounded-5" alt="">
-                    <img src="Assets/blockGames/nohd/cat3.png" class="rounded-5" alt="">
-                    <img src="Assets/blockGames/nohd/cat4.png" class="rounded-5" alt="">
-                    <img src="Assets/blockGames/nohd/cat5.png" class="rounded-5" alt="">
+                <div class="row row-cols-1 row-cols-md-6 justify-content-around p-3">
+                    <img src="Assets/blockGames/nohd/cat1 (1).png" class="rounded bounce" alt="">
+                    <img src="Assets/blockGames/nohd/cat2.png" class="img bounce" alt="">
+                    <img src="Assets/blockGames/nohd/cat3.png" class="bounce" alt="">
+                    <img src="Assets/blockGames/nohd/cat4.png" class="bounce" alt="">
+                    <img src="Assets/blockGames/nohd/cat5.png" class="img-fluid bounce" alt="">
                 </div>
             </div>
 
