--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 
-                <div class="collapse navbar-collapse justify-content-around" id="menu">
+                <div class="collapse navbar-collapse justify-content-end" id="menu">
                     <div class="navbar-nav">
                         <a href="index.html" class="nav-link text-white" target="_blank">Inicio</a>
                         <a href="nosotros.html" class="nav-link text-white" target="_blank">Nosotros</a>
